# ReadAloudDescribe

./: .gitignore  PROJECT_PLAN.md  README.md
android/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  describe_jni.cpp
android/app/src/main/java/com/listenai/describe/: DescribeActivity.kt  DescribeApplication.kt
android/app/src/main/java/com/listenai/describe/llama/: LlamaEngine.kt
android/app/src/main/java/com/listenai/describe/model/: GgufDownloadWorker.kt  GgufModelDownloader.kt  ModelKind.kt
android/app/src/main/java/com/listenai/describe/settings/: DescribeSettings.kt
android/app/src/main/java/com/listenai/describe/tts/: DescribeTts.kt
android/app/src/main/java/com/listenai/describe/ui/theme/: Theme.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/fastlane/: Appfile  Fastfile  README.md  report.xml
scripts/: README.md  run_corpus.py  run_moondream.py  run_multicrop_onnx.py  run_smolvlm.py  run_xenova_onnx.py
spike_notes/: 2026-06-23_day2_onnx_validation.md  2026-06-23_day2_pathB_killed.md  2026-06-23_day3_gguf_validated.md  2026-06-23_mac_validation.md
